--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -4237,6 +4237,14 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
   padding-left: 1em;
 }
 
+#big-image {
+    height: 38em;
+}
+
+#big-image > div {
+    width: 45%; 
+}
+
 #wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #offres > div > div.col-lg-12.service-content > div > div > p > span, #contact > div > div > div > div.contact-content > div.contact-info > p, #contact > div > div > div > div.contact-content > div.contact-form > h4, #services-attente > div > div > div.col-md-12.service-headline > h2, #portfolio-details > div > div > div > h4, #portfolio-details-file > div > div > div > h3, #three-points > div > div > div > div > ul > li > div.text, #offres > div > div > p.wow.fadeIn.animated, #services > div > div > p, #com-call-to > div.container > div > div > h3 {
     font-size: 28px !important;
 }
@@ -4347,6 +4355,9 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     .hero-section-video .typed-text .skilltechtypetext {
         line-height: 60px;
     }
+    #big-image {
+        padding-top: 8em;
+    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -4410,26 +4421,11 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 @media only screen and (max-width: 780px) {
-    #our-work > div > div > div.col-md-12.portfolio-images > div {
-        width: 95%;
-    }
-    #our-work > div > div > div.col-md-12.see-work {
-        height: 9em;
-    }
     #about > div > div > div > div.about-text {
         height: 45em;
     }
     body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
         line-height: 7em;
-    }
-}
-
-@media only screen and (max-width: 767px) {
-    #page-top > section:nth-child(11) {
-        display: none;
-    }
-    #offres-alt {
-        display: block;
     }
 }
 
@@ -4443,6 +4439,18 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     }
     #wedo {
         height: 48em;
+    }
+    #our-work > div > div > div.col-md-12.see-work {
+        height: 12em;
+    }
+    .offre1 {
+        width: 60%;
+    }
+    #page-top > section:nth-child(11) {
+        height: 128em;
+    }
+    #big-image > div {
+        width: 65%;
     }
 }
 
