--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -4067,11 +4067,11 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 #st-main-nav > ul {
-    right: 130px;
+    right: 16%
 }
 
 #st-nav > a {
-    right: 8%
+    right: 4%
 }
 
 #services > div > div.service-headline, #offres > div > div.service-headline {
@@ -4361,9 +4361,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #big-image {
         padding-top: 8em;
     }
-    #st-nav > a {
-        right: 10%
-    }
 }
 
 @media only screen and (max-width: 992px) {
@@ -4424,9 +4421,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #hero > div.container-fluid > div > div > div.service-item-read-more {
         padding-top: 14em;
     }
-    #st-nav > a {
-        right: 12%
-    }
 }
 
 @media only screen and (max-width: 780px) {
@@ -4466,9 +4460,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #about2 > div > div > div > div > h2 {
         line-height: 55px;
     }
-    #st-nav > a {
-        right: 14%
-    }
 }
 
 @media only screen and (max-width: 578px) {
@@ -4507,8 +4498,8 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #hero > div.container-fluid > div > div > div.hero-logo > img {
         width: 80%;
     }
-    #st-nav > a {
-        right: 16%
+    #st-main-nav > ul {
+        width: 20em;
     }
 }
 
@@ -4555,9 +4546,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     .offre1 {
         width: 80%;
     }
-    #st-nav > a {
-        right: 18%
-    }
 }
 
 @media only screen and (max-width: 480px) {
@@ -4580,9 +4568,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
         width: 100%;
         float: none !important;
         margin: 0 auto !important;
-    }
-    #st-nav > a {
-        right: 20%
     }
 }
 
@@ -4628,9 +4613,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     #our-work > div > div > div.col-md-12.see-work > h2 {
         font-size: 35px !important;
     }
-    #st-nav > a {
-        right: 22%
-    }
 }
 
 @media only screen and (max-width: 370px) {
@@ -4667,8 +4649,8 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     .offre1 {
         width: 100%;
     }
-    #st-nav > a {
-        right: 24%
+    #st-main-nav > ul {
+        width: 16em;
     }
 }
 
@@ -4694,9 +4676,6 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     }
     #big-image {
         padding-top: 3em;
-    }
-    #st-nav > a {
-        right: 28%
     }
 }
 
