--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -2833,8 +2833,6 @@ footer p a {
         position: fixed;
         width: 90%;
         max-width: 400px;
-        bottom: 20px;
-        top: auto;
         background: rgba(12, 22, 30, 0.9);
         visibility: hidden;
         -webkit-transform: scale(0);
@@ -3623,7 +3621,7 @@ footer p a {
     top: 0;
     left: 0;
     background: url(../../images/overlay-pattern.png) repeat;
-    opacity: 0.6;
+    opacity: 0.2;
 }
 
 /* 10. Skills Section
@@ -4067,11 +4065,13 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 }
 
 #st-main-nav > ul {
-    right: 16%
+  top: 4%;
+  right: 4%;
 }
 
 #st-nav > a {
-    right: 4%
+    right: 4%;
+    top: 4%;
 }
 
 #services > div > div.service-headline, #offres > div > div.service-headline {
@@ -4248,7 +4248,7 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
     width: 90%;
 }
 
-#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #offres > div > div.col-lg-12.service-content > div > div > p > span, #contact > div > div > div > div.contact-content > div.contact-info > p, #contact > div > div > div > div.contact-content > div.contact-form > h4, #services-attente > div > div > div.col-md-12.service-headline > h2, #portfolio-details > div > div > div > h4, #portfolio-details-file > div > div > div > h3, #three-points > div > div > div > div > ul > li > div.text, #offres > div > div > p.wow.fadeIn.animated, #services > div > div > p, #com-call-to > div.container > div > div > h3 {
+#wedo > div > div > div > div > h3, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #quote > div.container-fluid > div > div.col-md-12.quote-headline > h4, #services > div > div.col-lg-12.service-content > div > div > p > span, #services > div > div > p.wow.fadeIn.animated, #services > div > div > p, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #offres > div > div.col-lg-12.service-content > div > div > p > span, #contact > div > div > div > div.contact-content > div.contact-form > h4, #services-attente > div > div > div.col-md-12.service-headline > h2, #portfolio-details > div > div > div > h4, #portfolio-details-file > div > div > div > h3, #three-points > div > div > div > div > ul > li > div.text, #offres > div > div > p.wow.fadeIn.animated, #services > div > div > p, #com-call-to > div.container > div > div > h3 {
     font-size: 28px !important;
 }
 
@@ -4704,4 +4704,28 @@ body > section.portfolio-item > div.container-fluid > div > div > div > div.cont
 #contact > div > div > div > div > div.contact-info > div:nth-child(2) > div.info-text.wow.fadeIn.animated > a {
   color: white;
   font-size: 22px;
+}
+
+#contact > div > div > div > div > div.contact-info > div:nth-child(2) > div.info-text.wow.fadeIn.animated > a{
+  font-size: 32px;
+
+}
+
+#contact > div > div > div > div > div.contact-info > div:nth-child(3) > div.info-text.wow.fadeIn.animated > p{
+  font-size: 32px;
+}
+
+#contact > div > div > div > div > div.contact-info > div:nth-child(4) > div.info-text.wow.fadeIn.animated > p{
+  font-size: 32px;
+}
+
+#contact > div > div > div > div > div.contact-info > div:nth-child(2) {
+  padding-top: 4em;
+}
+
+#contact > div > div > div > div > div.contact-info > div.bottom-info{
+  padding-top: 6em;
+}
+#contact > div > div > div > div > div.contact-info > p{
+  font-size: 42px;
 }
