modif valeur ajouté

--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -84,7 +84,7 @@ div.offre1:nth-child(3) {
 #our-work > div > div > div.col-md-12.portfolio-images > div:nth-child(2) > div > div.sweep-from-center > div > div > h3 > a ,
 #our-work > div > div > div.col-md-12.portfolio-images > div:nth-child(3) > div > div.sweep-from-center > div > div > h3 > a ,
 #our-work > div > div > div.col-md-12.portfolio-images > div:nth-child(4) > div > div.sweep-from-center > div > div > h3 > a {
-  color: #ff701b;
+  color: black;
 }
 #our-work > div > div > div.col-md-12.portfolio-images > div:nth-child(1) > div > div.sweep-from-center > div > div > h3 > a:hover ,
 #our-work > div > div > div.col-md-12.portfolio-images > div:nth-child(2) > div > div.sweep-from-center > div > div > h3 > a:hover ,
@@ -99,7 +99,7 @@ div.offre1:nth-child(3) {
 }
 
 /* secondary color */
-.our-work-section .new-style p a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > h3 > a, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #portfolio-details-file > div > div > div > h2, #portfolio-details-file > div > div > div > h3 > span {
+.our-work-section .new-style p a, #our-work > div > div > div.col-md-12.portfolio-images > div > div.portfolio-img > div.sweep-from-center > div > div > a, #about > div > div > div > div.about-text > h3 > span, #about2 > div > div > div > div.about-text > h3 > span, #about3 > div > div > div > div.about-text > h3 > span, #portfolio-details-file > div > div > div > h2, #portfolio-details-file > div > div > div > h3 > span {
     color: #ff701b;
 }
 
@@ -113,14 +113,7 @@ div.offre1:nth-child(3) {
 
 /* Gradients */
 /* secondary and secondary 2 */
-.our-work-section .btn-default {
-    background-image: -ms-linear-gradient(left, #af6c42 0%, #ff701b 100%);
-    background-image: -moz-linear-gradient(left, #af6c42 0%, #ff701b 100%);
-    background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #af6c42), color-stop(1, #ff701b));
-    background-image: -webkit-linear-gradient(left, #af6c42, #ff701b 100%);
-    background-image: linear-gradient(to right, #af6c42, #ff701b 100%);
 
-}
 
 .offre1 .btn-default {
     background-image: -ms-linear-gradient(left, #af6c42 0%, #ff701b 100%);
@@ -131,7 +124,7 @@ div.offre1:nth-child(3) {
 
 }
 
-.call-to-section .btn-default {
+.call-to-section .btn-default, .our-work-section .btn-default {
     background-image: -ms-linear-gradient(left, #00F2FF 0%, #00BBFF 100%);
     background-image: -moz-linear-gradient(left, #00F2FF 0%, #00BBFF 100%);
     background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #00F2FF), color-stop(1, #00BBFF));
