--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -720,7 +720,8 @@ header #st-logo img {
 
 .portfolio-img .sweep-layer {
     width: 100%;
-    background-image: linear-gradient(to right, #00F2FF, #ff701b 100%);
+    background-image: linear-gradient(to right, rgba(0,242,255,0.8), rgba(255,112,27,0.8) 100%);
+    opacity: 50%;
     text-align: center;
     padding-top: 35%;
     position: absolute;
